UPDATED:package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tailwind-css",
-  "homepage": "https://github.com/Padamaniabhay/book-my-show.git",
+  "homepage": "https://padamaniabhay.github.io/book-my-show/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
